# AuditAI

./: .gitignore  Dockerfile  MEDIUM_ARTICLE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  publish.yml
assessment/: cli.py  config.py  models.py  runner.py
assessment/ai/: analyzer.py  client.py  preprocessor.py  prompts.py
assessment/reports/: html.py  markdown.py
assessment/scanners/: __init__.py  base.py  filesystem.py  kernel.py  lynis_wrapper.py  network.py  os_hardening.py  packages.py  processes.py  services.py  users.py
debian/: .gitignore  auditai.1  auditai.manpages  changelog  control  copyright  watch
debian/tests/: control
docs/: kali-new-tool-request.md  owasp-project-application.md
tests/: test_cli.py
